--- a/app/templates/index_proj.html
+++ b/app/templates/index_proj.html
@@ -4,10 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation project</title>
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/app_override.css">
-    <!-- build:js js/vendor/modernizr.js -->
+    <title><%= ProjectName %></title>
+    <link rel="stylesheet" href="<%= CommonDirName %>/css/app.css">
+    <link rel="stylesheet" href="<%= ProjectName %>_template/css/<%= ProjectName %>.css">
+    <link rel="stylesheet" href="<%= ProjectName %>_template/css/<%= ProjectName %>_override.css">
+    <!-- build:js <%= CommonDirName %>/js/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
@@ -20,12 +21,12 @@
       </div>
     </div>
     
-    <!-- build:js js/vendor/jquery.min.js -->
+    <!-- build:js <%= CommonDirName %>/js/vendor/jquery.min.js -->
     <script src="bower_components/jquery/jquery.min.js"></script>
     <!-- endbuild -->
-    <!-- build:js js/foundation/foundation.min.js -->
+    <!-- build:js <%= CommonDirName %>/js/foundation/foundation.min.js -->
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <!-- endbuild -->
-    <script src="js/app.js"></script>
+    <script src="<%= ProjectName %>_template/js/<%= ProjectName %>.js"></script>
   </body>
 </html>
