--- a/app/templates/index_proj.html
+++ b/app/templates/index_proj.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= ProjectName %></title>
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+    <% if (fontAwesome) { %><!-- build:css <%= CommonDirName %>/css/font-awesome.min.css -->
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <!-- endbuild --><% } %>
     <link rel="stylesheet" href="<%= CommonDirName %>/css/app.css">
     <link rel="stylesheet" href="<%= ProjectName %>_template/css/<%= ProjectName %>.css">
     <link rel="stylesheet" href="<%= ProjectName %>_template/css/<%= ProjectName %>_override.css">
@@ -23,7 +25,7 @@
           <li>Publishing to dist directory</li>
           <li>LiveReload (with Chrome Extension)</li>
           <li>JSHint</li>
-          <li>Font Awesome (CDN for now)</li>
+          <li>Font Awesome (option)</li>
         </ul>
         <h1>Grunt tasks:</h1>
         <ul>
@@ -33,7 +35,7 @@
           <li>'grunt publish' - dist directory</li>
         </ul>
         <h2 class="text-right">
-          <a href="https://github.com/juliancwirko/generator-zf5"><i class="fa fa-github"></i></a>
+          <a href="https://github.com/juliancwirko/generator-zf5"><% if (fontAwesome) { %><i class="fa fa-github"></i><% } else { %>github<% } %></a>
         </h2>
       </div>
     </div>
