--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foundation project</title>
     <% if (fontAwesome) { %><!-- build:css css/font-awesome.min.css -->
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <!-- endbuild --><% } %>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/app_override.css">
     <!-- build:js js/vendor/modernizr.js -->
-    <script src="bower_components/modernizr/modernizr.js"></script>
+    <script src="../bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
   <body>
@@ -40,10 +40,10 @@
     </div>
     
     <!-- build:js js/vendor/jquery.min.js -->
-    <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="../bower_components/jquery/jquery.min.js"></script>
     <!-- endbuild -->
     <!-- build:js js/foundation/foundation.min.js -->
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="../bower_components/foundation/js/foundation.min.js"></script>
     <!-- endbuild -->
     <script src="js/app.js"></script>
   </body>
