--- a/app/templates/index_proj.html
+++ b/app/templates/index_proj.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= ProjectName %></title>
     <% if (fontAwesome) { %><!-- build:css <%= CommonDirName %>/css/font-awesome.min.css -->
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <!-- endbuild --><% } %>
     <link rel="stylesheet" href="<%= CommonDirName %>/css/app.css">
     <link rel="stylesheet" href="<%= ProjectName %>_template/css/<%= ProjectName %>.css">
     <link rel="stylesheet" href="<%= ProjectName %>_template/css/<%= ProjectName %>_override.css">
     <!-- build:js <%= CommonDirName %>/js/vendor/modernizr.js -->
-    <script src="bower_components/modernizr/modernizr.js"></script>
+    <script src="../bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
   <body>
@@ -41,10 +41,10 @@
     </div>
     
     <!-- build:js <%= CommonDirName %>/js/vendor/jquery.min.js -->
-    <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="../bower_components/jquery/jquery.min.js"></script>
     <!-- endbuild -->
     <!-- build:js <%= CommonDirName %>/js/foundation/foundation.min.js -->
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="../bower_components/foundation/js/foundation.min.js"></script>
     <!-- endbuild -->
     <script src="<%= ProjectName %>_template/js/<%= ProjectName %>.js"></script>
   </body>
