--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <% if (projectTemplate) { %><title><%= ProjectName %></title>
     <% if (fontAwesome) { %><!-- build:css <%= CommonDirName %>/css/font-awesome.min.css -->
-    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
     <!-- endbuild --><% } %>
     <link rel="stylesheet" href="<%= CommonDirName %>/css/app.css">
     <link rel="stylesheet" href="<%= ProjectName %>_template/css/<%= ProjectName %>.css">
     <link rel="stylesheet" href="<%= ProjectName %>_template/css/<%= ProjectName %>_override.css">
     <!-- build:js <%= CommonDirName %>/js/vendor/modernizr.js -->
-    <script src="../bower_components/modernizr/modernizr.js"></script>
+    <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild --><% } else { %><title>Foundation project</title>
     <% if (fontAwesome) { %><!-- build:css css/font-awesome.min.css -->
-    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
     <!-- endbuild --><% } %>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/app_override.css">
     <!-- build:js js/vendor/modernizr.js -->
-    <script src="../bower_components/modernizr/modernizr.js"></script>
+    <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild --><% } %>
   </head>
   <body>
@@ -31,16 +31,17 @@
         <ul>
           <li>Sass compiling</li>
           <li>Publishing to dist directory</li>
-          <li>LiveReload (with Chrome Extension)</li>
+          <li>Server with LiveReload</li>
           <li>JSHint</li>
           <li>Font Awesome (option)</li>
         </ul>
         <h1>Grunt tasks:</h1>
         <ul>
-          <li>'grunt' - watching for changes (Sass, LiveReload)</li>
+          <li>'grunt' - watching (Sass, Server on 127.0.0.1:9000 with LiveReload)</li>
           <li>'grunt build' - Sass</li>
           <li>'grunt validate-js' - JSHint</li>
           <li>'grunt publish' - dist directory</li>
+          <li>'grunt server-dist' - server on 127.0.0.1:9001 - dist directory (preview only)</li>
         </ul>
         <h2 class="text-right">
           <a href="https://github.com/juliancwirko/generator-zf5"><% if (fontAwesome) { %><i class="fa fa-github"></i><% } else { %>github<% } %></a>
@@ -49,16 +50,16 @@
     </div>
     
     <% if (projectTemplate) { %><!-- build:js <%= CommonDirName %>/js/vendor/jquery.min.js -->
-    <script src="../bower_components/jquery/jquery.min.js"></script>
+    <script src="bower_components/jquery/jquery.min.js"></script>
     <!-- endbuild -->
     <!-- build:js <%= CommonDirName %>/js/foundation/foundation.min.js -->
-    <script src="../bower_components/foundation/js/foundation.min.js"></script>
+    <script src="bower_components/foundation/js/foundation.min.js"></script>
     <!-- endbuild -->
     <script src="<%= ProjectName %>_template/js/<%= ProjectName %>.js"></script><% } else { %><!-- build:js js/vendor/jquery.min.js -->
-    <script src="../bower_components/jquery/jquery.min.js"></script>
+    <script src="bower_components/jquery/jquery.min.js"></script>
     <!-- endbuild -->
     <!-- build:js js/foundation/foundation.min.js -->
-    <script src="../bower_components/foundation/js/foundation.min.js"></script>
+    <script src="bower_components/foundation/js/foundation.min.js"></script>
     <!-- endbuild -->
     <script src="js/app.js"></script><% } %>
 
