uncss and cleaning

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,21 +5,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <% if (projectTemplate) { %><title><%= ProjectName %></title>
-    <% if (fontAwesome) { %><!-- build:css <%= CommonDirName %>/css/font-awesome.min.css -->
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-    <!-- endbuild --><% } %>
+    <!-- build:css <%= CommonDirName %>/css/app.min.css -->
+    <% if (fontAwesome) { %>
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css"><% } %>
     <link rel="stylesheet" href="<%= CommonDirName %>/css/app.css">
+    <!-- endbuild -->
+    <!-- build:css <%= ProjectName %>_template/css/<%= ProjectName %>.min.css -->
     <link rel="stylesheet" href="<%= ProjectName %>_template/css/<%= ProjectName %>.css">
     <link rel="stylesheet" href="<%= ProjectName %>_template/css/<%= ProjectName %>_override.css">
-    <!-- build:js <%= CommonDirName %>/js/vendor/modernizr.js -->
+    <!-- endbuild -->
+    <!-- build:js <%= CommonDirName %>/js/vendor/modernizr.min.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild --><% } else { %><title>Foundation project</title>
-    <% if (fontAwesome) { %><!-- build:css css/font-awesome.min.css -->
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
-    <!-- endbuild --><% } %>
+    <!-- build:css css/app.min.css -->
+    <% if (fontAwesome) { %>
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css"><% } %>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/app_override.css">
-    <!-- build:js js/vendor/modernizr.js -->
+    <!-- endbuild -->
+    <!-- build:js js/vendor/modernizr.min.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild --><% } %>
   </head>
@@ -50,18 +54,22 @@
     </div>
     
     <% if (projectTemplate) { %><!-- build:js <%= CommonDirName %>/js/vendor/jquery.min.js -->
-    <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="bower_components/jquery/jquery.js"></script>
     <!-- endbuild -->
     <!-- build:js <%= CommonDirName %>/js/foundation/foundation.min.js -->
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="bower_components/foundation/js/foundation.js"></script>
     <!-- endbuild -->
-    <script src="<%= ProjectName %>_template/js/<%= ProjectName %>.js"></script><% } else { %><!-- build:js js/vendor/jquery.min.js -->
-    <script src="bower_components/jquery/jquery.min.js"></script>
+    <!-- build:js <%= ProjectName %>_template/js/<%= ProjectName %>.min.js -->
+    <script src="<%= ProjectName %>_template/js/<%= ProjectName %>.js"></script>
+    <!-- endbuild --><% } else { %>
+    <!-- build:js js/vendor/jquery.min.js -->
+    <script src="bower_components/jquery/jquery.js"></script>
     <!-- endbuild -->
     <!-- build:js js/foundation/foundation.min.js -->
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="bower_components/foundation/js/foundation.js"></script>
     <!-- endbuild -->
-    <script src="js/app.js"></script><% } %>
-
+    <!-- build:js js/app.min.js -->
+    <script src="js/app.js"></script>
+    <!-- endbuild --><% } %>
   </body>
 </html>
