--- a/app/templates/scss/app.scss
+++ b/app/templates/scss/app.scss
@@ -27,6 +27,7 @@
   "foundation/components/panels",
   "foundation/components/pricing-tables",
   "foundation/components/progress-bars",
+  "foundation/components/range-slider",
   "foundation/components/reveal",
   "foundation/components/side-nav",
   "foundation/components/split-buttons",
@@ -40,3 +41,5 @@
   "foundation/components/type",
   "foundation/components/offcanvas",
   "foundation/components/visibility";
+
+  @import "appstyles";
