--- a/app/templates/scss/app.scss
+++ b/app/templates/scss/app.scss
@@ -1,6 +1,7 @@
 @import "normalize";
 @import "settings";
 
+// Make sure the charset is set appropriately
 @charset "UTF-8";
 
 // Behold, here are all the Foundation components.
