--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,11 +24,12 @@
       <div class="small-12 small-centered medium-10 medium-centered large-8 large-centered columns panel radius">
         <h1>Yo Foundation 5!</h1>
         <ul>
-          <li>Sass compiling</li>
+          <li>Sass compiling (Ruby or Node/Libsass)</li>
           <li>Publishing to dist directory</li>
           <li>Server with LiveReload</li>
           <li>JSHint</li>
           <li>Grunt Bower install</li>
+          <li>Imagemin</li>
           <li>Font Awesome (option)</li>
         </ul>
         <h1>Grunt tasks:</h1>
