jade - in progress

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,6 +25,7 @@
         <h1>Yo Foundation 5!</h1>
         <ul>
           <li>Sass compiling (Ruby or Node/Libsass)</li>
+          <li>Jade templating engine (option)</li>
           <li>Publishing to dist directory</li>
           <li>Server with LiveReload</li>
           <li>JSHint</li>
@@ -36,6 +37,7 @@
         <ul>
           <li>'grunt' - watching (Sass, Server on 127.0.0.1:9000 with LiveReload)</li>
           <li>'grunt compile-sass' - Sass</li>
+          <li>'grunt compile-jade' - Jade</li>
           <li>'grunt validate-js' - JSHint</li>
           <li>'grunt bower-install' - injecting bower libraries</li>
           <li>'grunt publish' - dist directory</li>
