--- a/app/templates/jade/index.jade
+++ b/app/templates/jade/index.jade
@@ -1,6 +1,6 @@
 doctype html
 html(class="no-js", lang="en")
-    include partials/header
+    include header
     body
         div.row
             div(class="small-12 small-centered medium-10 medium-centered large-8 large-centered columns panel radius")
@@ -26,4 +26,4 @@ html(class="no-js", lang="en")
                 h2(class="text-right")
                     a(href="https://github.com/juliancwirko/generator-zf5")
                         <% if (fontAwesome) { %>i(class="fa fa-twitter")<% } else { %>span github<% } %>
-        include partials/footer
+        include footer
