new Foundation version

--- a/app/templates/jade/index.jade
+++ b/app/templates/jade/index.jade
@@ -25,5 +25,5 @@ html(class="no-js", lang="en")
                     li 'grunt server-dist' - server on 127.0.0.1:9001 - dist directory (preview only)
                 h2(class="text-right")
                     a(href="https://github.com/juliancwirko/generator-zf5")
-                        <% if (fontAwesome) { %>i(class="fa fa-twitter")<% } else { %>span github<% } %>
+                        <% if (fontAwesome) { %>i(class="fa fa-github")<% } else { %>span github<% } %>
         include footer
