--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -946,6 +946,11 @@
     </div>
 
     <!-- build:js js/vendor/libraries.min.js -->
+    <script src="bower_components/foundation/js/vendor/modernizr.js"></script>
+    <script src="bower_components/foundation/js/vendor/jquery.js"></script>
+    <script src="bower_components/foundation/js/vendor/jquery.cookie.js"></script>
+    <script src="bower_components/foundation/js/vendor/fastclick.js"></script>
+    <script src="bower_components/foundation/js/vendor/placeholder.js"></script>
     <!-- bower:js -->
     <!-- endbower -->
     <!-- endbuild -->
