--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/app_override.css">
     <!-- endbuild -->
-    <!-- build:js js/vendor/modernizr.min.js -->
-    <script src="bower_components/modernizr/modernizr.js"></script>
+    <!-- build:js js/vendor/modernizr-custom.min.js -->
+    <script src="js/modernizr-custom.js"></script>
     <!-- endbuild -->
   </head>
   <body>
