--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/app_override.css">
     <!-- endbuild -->
-    <!-- build:js js/vendor/modernizr-custom.min.js -->
-    <script src="js/modernizr-custom.js"></script>
+    <!-- build:js js/vendor/modernizr.min.js -->
+    <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
   <body>
@@ -24,7 +24,6 @@
         <h1>Yo Foundation 5!</h1>
         <ul>
           <li>Sass compiling (Ruby or Node/Libsass)</li>
-          <li>Jade templating engine (option)</li>
           <li>Publishing to dist directory</li>
           <li>Server with LiveReload</li>
           <li>JSHint</li>
@@ -36,7 +35,6 @@
         <ul>
           <li>'grunt' - watching (Sass, Server on 127.0.0.1:9000 with LiveReload)</li>
           <li>'grunt compile-sass' - Sass</li>
-          <li>'grunt compile-jade' - Jade</li>
           <li>'grunt validate-js' - JSHint</li>
           <li>'grunt bower-install' - injecting bower libraries</li>
           <li>'grunt publish' - dist directory</li>
